Fixed tab content height to overflow

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -136,6 +136,11 @@ body {
   padding-top: (@navbar-height + 2px);
   height: 100%;
   width: @sidebar-width;
+
+  .tab-content {
+    height: calc(~"100% -" @navbar-height);
+    overflow-y: scroll;
+  }
 }
 
 #structure {
